--- a/src/components/AddPost/add-post.sass
+++ b/src/components/AddPost/add-post.sass
@@ -7,7 +7,7 @@
 
   .main-content
     border-radius: 1rem
-    width: 50%
+    width: 40rem
     height: 80%
     background-color: #950740
     padding: 1rem
@@ -55,3 +55,9 @@
       text-align: center
       padding: .6rem 0
       background-color: #6F2232
+
+
+@media only screen and (max-width: 780px) 
+  .add-post
+    .main-content
+      width: 90%
