--- a/src/components/Post/post.sass
+++ b/src/components/Post/post.sass
@@ -8,6 +8,7 @@
   .morebtn
     position: relative
     top: 0
+    right: 0
     left: 24rem
     width: 1rem
 
@@ -20,3 +21,7 @@
 
   .body
     color: #fff
+
+@media only screen and (max-width: 550px) 
+  .post
+    width: 90%
