--- a/src/components/PostInfo/post-info.sass
+++ b/src/components/PostInfo/post-info.sass
@@ -7,7 +7,7 @@
   
   .main-content
     border-radius: 1rem
-    width: 50%
+    width: 40rem
     height: 80%
     background-color: #950740
     padding: 1rem
@@ -26,7 +26,7 @@
       background-color: #ffffff00
       border: 1px solid #fff
       border-radius: .5rem
-      width: 90%
+      width: 98%
       color: #fff
       line-height: 2rem
       padding: .3rem
@@ -47,7 +47,7 @@
       align-items: center
 
     .button
-      margin: 1rem
+
       border-radius: .5rem
       border: 1px solid #fff
       color: #fff
@@ -55,3 +55,9 @@
       text-align: center
       padding: .6rem 0
       background-color: #6F2232
+
+
+@media only screen and (max-width: 780px) 
+  .post-info
+    .main-content
+      width: 70%
