--- a/src/components/UserInfo/user-info.sass
+++ b/src/components/UserInfo/user-info.sass
@@ -27,3 +27,7 @@
       padding-left: .5rem
       font-weight: 100
       font-size: 1rem
+
+@media only screen and (max-width: 780px) 
+  .user-info
+    width: 90%
