--- a/src/components/AddPost/add-post.sass
+++ b/src/components/AddPost/add-post.sass
@@ -11,6 +11,7 @@
     height: 80%
     background-color: #950740
     padding: 1rem
+    position: relative
 
     .container
       display: flex
@@ -22,7 +23,7 @@
         background-color: #ffffff00
         border: 1px solid #fff
         border-radius: 0.2rem
-        width: 30rem
+        width: 80%
         height: 1.8rem
         color: #fff
         line-height: 2rem
@@ -34,7 +35,7 @@
         background-color: #ffffff00
         border: 1px solid #fff
         border-radius: 0.2rem
-        width: 30rem
+        width: 80%
         height: 15rem
         color: #fff
         line-height: 2rem
@@ -47,6 +48,9 @@
         color: #fff
     
     .create-btn
+      position: absolute
+      bottom: 1rem
+      right: 1rem
       margin-top: 3rem
       border-radius: .5rem
       border: 1px solid #fff
