--- a/src/components/Post/post.sass
+++ b/src/components/Post/post.sass
@@ -4,13 +4,16 @@
   margin: 1rem
   padding: 1rem
   border-radius: 1rem
+  position: relative
 
-  .morebtn
-    position: relative
-    top: 0
-    right: 0
-    left: 24rem
-    width: 1rem
+  .test
+    position: absolute
+    top: .5rem
+    right: .5rem
+
+    .morebtn
+      left: 24rem
+      width: 1rem
 
   .title
     text-align: center
